# Xycar_Linedetection

./: .gitignore  README.md
auto_drive/launch/: cam_tune.launch  drive_test.launch  imgui.ini  viewer_test.launch
auto_drive/src/: cam_tune.py  drive_check.py  hough_drive.py  hough_drive_filter.py
control/: CMakeLists.txt  README.md  package.xml
control/config/: config.yaml
control/include/LaneKeepingSystem/: LaneKeepingSystem.hpp  PIDController.hpp
control/launch/: drive.launch
control/src/LaneKeepingSystem/: HoughTransformLaneDetector.cpp  LaneKeepingSystem.cpp  MovingAverageFilter.cpp  PIDController.cpp
drive/: CMakeLists.txt  package.xml
drive/launch/: drive.launch
drive/src/: linedetect.cpp
human_track/: CMakeLists.txt  package.xml
human_track/launch/: yolo.launch
human_track/src/: common_ros_cls.py  judge.py  safety_box.py  yolo_drive.py  yolo_tracking.py
joystick_cam/launch/: joy_cam.launch
joystick_cam/src/: joy_cam.py
my_motor/: package.xml
my_motor/launch/: 8_drive.launch
my_motor/src/: 8_drive.py
test/: CMakeLists.txt  package.xml
test/src/: lane_detect.py
ultra_drive/: package.xml
ultra_drive/launch/: ultra_drive.launch
ultra_drive/src/: ultra_drive.py
xycar_device/darknet_ros/darknet_ros/: CMakeLists.txt
xycar_device/realsense2_camera/launch/: demo_pointcloud.launch  imgui.ini  view_depth_cam.launch
xycar_device/realsense2_camera/src/: view_depth_camera.py
xycar_device/xycar_imu/launch/: xycar_imu_9dof.launch  xycar_imu_9dof_noviewer.launch
xycar_device/xycar_imu/node/: 9dof_imu_node.py
xycar_device/xycar_imu/rviz/: view_imu.rviz
xycar_device/xycar_imu/src/: imu_acc_visual.cpp
xycar_device/xycar_lidar/launch/: lidar.launch  lidar_noviewer.launch
xycar_device/xycar_lidar/rviz/: xycar_lidar.rviz
xycar_device/xycar_lidar/src/: rplidar_viewer.py
(+5 files in other folders)
